adicionando abas do formulário

--- a/templates/uc_list.html
+++ b/templates/uc_list.html
@@ -29,7 +29,7 @@
                             {% endfor %}
                         </tbody>
                     </table>
-                </div>
+                    <a href="/uc/create" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Novo</a>
             </div>
         </div>
     </body>
