adicionando botão de alterar

--- a/templates/uc_list.html
+++ b/templates/uc_list.html
@@ -25,6 +25,7 @@
                                 <td>{{uc.tipo}}</td>
                                 <td>{{uc.inicio}}</td>
                                 <td>{{uc.fim}}</td>
+                                <td><a href="/uc/update/{{uc.id}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Alterar</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
